adjusted "add new bugapoint" button

--- a/src/app/admin-components/bugapoint-management/bugapointmenu/bugapointmenu.component.css
+++ b/src/app/admin-components/bugapoint-management/bugapointmenu/bugapointmenu.component.css
@@ -1,7 +1,8 @@
 .newpointDiv {
   display: flex;
   flex-direction: column;
-
+  padding-left: 20vw;
+  padding-right: 20vw;
 
   box-sizing: border-box;
 }
